tests/ui/modules/special_module_name.rs
//~^ WARN found module declaration for lib.rs
//~| ERROR file not found for module `lib`
//~^ WARN found module declaration for main.rs
//~| ERROR file not found for module `main`

fn main() {}
